# esp32-tflite-accelerometer

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/mpu_driver/: CMakeLists.txt  component.mk
components/mpu_driver/include/: MPU.h  MPUdmp.h
components/mpu_driver/include/mpu/: log.h  math.h  registers.h  types.h  utils.h
components/mpu_driver/src/: MPU.cpp  MPUdmp.cpp
components/mpu_task/: CMakeLists.txt  mpu_task.cpp
components/mpu_task/include/: mpu_task.h
components/tfmicro/: CMakeLists.txt
components/tfmicro/tensorflow/lite/micro/: micro_error_reporter.cc  micro_optional_debug_tools.cc
main/: CMakeLists.txt  accelerometer_handler.cc  constants.h  gesture_predictor.cc  mpu_i2c.cpp  output_handler.cc
