idf_component_register(SRCS mpu_i2c.cpp 
                            accelerometer_handler.cc 
                            main_functions.cc 
                            ring_micro_features_data.cc   
                            magic_wand_model_data.cc   
                            output_handler.cc 
                            slope_micro_features_data.cc 
                            gesture_predictor.cc 
                             )


